# arps-euclidya

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  DESIGN.md  README.md
.github/scripts/: wiki_transform.py
.github/workflows/: build.yml  deploy.yml  wiki-sync.yml
patches/Factory/: Init.euclidya  Tutorial_0.euclidya  Tutorial_1.euclidya  Tutorial_2.euclidya  Tutorial_3.euclidya  Tutorial_4.euclidya  Tutorial_5.euclidya  Tutorial_6.euclidya
patches/Factory/Expressive/: Gesture_Velocity_Ratchet.euclidya  MPE_Filter_Dialogue.euclidya  Pad_Pressure_Gate.euclidya  Zip_MPE_Recombine.euclidya
patches/Factory/Harmonic/: And_Or_Logic.euclidya  Chord_Stack_Quantized.euclidya  Diverge_Spread.euclidya  Interleave_Counterpoint.euclidya
patches/Factory/Melodic/: Sequence_Fold_Return.euclidya  Split_Dialogue.euclidya  UpDown_vs_Interleave.euclidya  Walk_Evolve.euclidya
patches/Factory/Microtonal/: 19TET_Neutral_Triads.euclidya  31TET_Meantone_Sweep.euclidya  JI_5Limit_Pad.euclidya  Pythagorean_UpDown.euclidya
patches/Factory/Rhythmic/: Euclid_Basic.euclidya  Polymeter_Split.euclidya  Ratchet_Cascade.euclidya  Shuffle_Humanize.euclidya
patches/Factory/Tutorial/: Tutorial_0.euclidya  Tutorial_1.euclidya  Tutorial_2.euclidya  Tutorial_3.euclidya  Tutorial_4.euclidya  Tutorial_5.euclidya  Tutorial_6.euclidya
patches/FactoryTunings/: 19-tet.scl  22-tet.scl  31-tet.scl  53-tet.scl  ji_5limit.scl  meantone_qc.scl  pythagorean.scl
resources/scales/12-TET/: Aeolian.json  Blues.json  Chromatic.json  Diminished.json  Dorian.json  HarmonicMinor.json  Ionian.json  Locrian.json  Lydian.json  Major.json  MajorPentatonic.json  MelodicMinor.json  Minor.json  MinorPentatonic.json  Mixolydian.json  Phrygian.json  WholeTone.json
src/: AllNotesNode.cpp  AllNotesNode.h  AppSettings.cpp  AppSettings.h  ArpsLookAndFeel.cpp  ArpsLookAndFeel.h  CMakeLists.txt  ChordNNode.cpp  ChordNNode.h  ChordSplitNode.cpp  ChordSplitNode.h  ClockManager.cpp  ClockManager.h  ConcatenateNode.h  ConvergeNode.cpp  ConvergeNode.h  DataModel.h  DiagnosticNode.cpp  DiagnosticNode.h  DivergeNode.cpp  DivergeNode.h  EuclideanLookAndFeel.cpp  EuclideanLookAndFeel.h  EuclideanMath.cpp  EuclideanMath.h  EuclideanVisualizer.h  FoldNode.cpp  FoldNode.h  GraphCanvas.cpp  GraphCanvas.h  GraphEngine.cpp  GraphEngine.h  GraphNode.cpp  GraphNode.h  LayoutConstants.h  LayoutParser.h  MacroColours.h  MacroMappingMenu.h  MacroParameter.h  MidiHandler.cpp  (+63 more)
src/AlgorithmicModulatorNode/: AlgorithmicModulatorNode.cpp  AlgorithmicModulatorNode.h  AlgorithmicModulatorNode.json
src/AllNotesNode/: AllNotesNode.cpp  AllNotesNode.h  AllNotesNode.json
src/AndNode/: AndNode.cpp  AndNode.h
src/ChordNNode/: ChordNNode.cpp  ChordNNode.h  ChordNNode.json
src/ChordSplitNode/: ChordSplitNode.cpp  ChordSplitNode.h  ChordSplitNode.json
src/ConcatenateNode/: ConcatenateNode.cpp  ConcatenateNode.h
src/ConvergeNode/: ConvergeNode.cpp  ConvergeNode.h
src/DiagnosticNode/: DiagnosticNode.cpp  DiagnosticNode.h  DiagnosticNode.json
src/DivergeNode/: DivergeNode.cpp  DivergeNode.h
src/FoldNode/: FoldNode.cpp  FoldNode.h  FoldNode.json
src/InterleaveNode/: InterleaveNode.cpp  InterleaveNode.h  InterleaveNode.json
src/MidiInNode/: MidiInNode.cpp  MidiInNode.h  MidiInNode.json
src/MidiOutNode/: EuclideanVisualizer.h  MidiOutNode.cpp  MidiOutNode.h  MidiOutNode.json  MidiOutNodeEditor.cpp
src/MpeFilterNode/: MpeFilterNode.cpp  MpeFilterNode.h  MpeFilterNode.json
src/MultiplyNode/: MultiplyNode.cpp  MultiplyNode.h  MultiplyNode.json
src/OctaveStackNode/: OctaveStackNode.cpp  OctaveStackNode.h  OctaveStackNode.json
src/OctaveTransposeNode/: OctaveTransposeNode.cpp  OctaveTransposeNode.h  OctaveTransposeNode.json
src/OrNode/: OrNode.cpp  OrNode.h
src/QuantizerNode/: QuantizerNode.cpp  QuantizerNode.h  QuantizerNode.json
src/ReverseNode/: ReverseNode.cpp  ReverseNode.h
src/RouteNode/: RouteNode.cpp  RouteNode.h  RouteNode.json
src/Scales/: HarmonicAnalysis.cpp  HarmonicAnalysis.h  Scale.h  ScaleEditorComponent.cpp  ScaleEditorComponent.h  ScaleLibrary.cpp  ScaleLibrary.h
src/SelectNode/: SelectNode.cpp  SelectNode.h  SelectNode.json
src/SequenceNode/: SequenceNode.cpp  SequenceNode.h  SequenceNode.json
src/SortNode/: SortNode.cpp  SortNode.h
src/SplitNode/: SplitNode.cpp  SplitNode.h  SplitNode.json
src/SwitchNode/: SwitchNode.cpp  SwitchNode.h  SwitchNode.json
src/TextNoteNode/: TextNoteNode.cpp  TextNoteNode.h
src/TransposeNode/: TransposeNode.cpp  TransposeNode.h  TransposeNode.json
src/Tuning/: ScalaParser.cpp  ScalaParser.h  TuningLibrary.cpp  TuningLibrary.h  TuningPanel.cpp  TuningPanel.h  TuningTable.h
src/UnfoldNode/: UnfoldNode.cpp  UnfoldNode.h  UnfoldNode.json
src/UnzipNode/: UnzipNode.cpp  UnzipNode.h
src/VelocityFilterNode/: VelocityFilterNode.cpp  VelocityFilterNode.h  VelocityFilterNode.json
src/WalkNode/: WalkNode.cpp  WalkNode.h  WalkNode.json
src/XorNode/: XorNode.cpp  XorNode.h  XorNode.json
src/ZipNode/: ZipNode.cpp  ZipNode.h
tools/layout-editor/: editor.js  index.html  style.css
website/: docusaurus.config.ts  package-lock.json  sidebars.ts
website/docs/: developer-guide.md  euclidean-engine.md  intro.md  introduction.md  mpe-setup.md  node-dictionary.md  tutorials.md  user-experience.md  user-interface.md
website/src/components/HomepageFeatures/: index.tsx  styles.module.css
website/src/css/: custom.css
website/src/pages/: index.module.css  index.tsx
website/static/: CNAME
